# Copyright (c) 2021 Huawei Device Co., Ltd.
# Licensed under the Apache License, Version 2.0 (the "License");
# you may not use this file except in compliance with the License.
# You may obtain a copy of the License at
#
#     http://www.apache.org/licenses/LICENSE-2.0
#
# Unless required by applicable law or agreed to in writing, software
# distributed under the License is distributed on an "AS IS" BASIS,
# WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
# See the License for the specific language governing permissions and
# limitations under the License.

import("//build/ohos.gni")
import("//foundation/graphic/graphic_2d/graphic_config.gni")

config("test_header_config") {
  include_dirs = [ "export" ]
}

group("test_header") {
  public_configs = [ ":test_header_config" ]
  if (use_mingw_win) {
    defines = graphic_decode_windows_defines
    public_deps = [ "//foundation/graphic/graphic_2d/mock:graphic_mock_log" ]
  } else if (use_clang_mac) {
    defines = graphic_decode_mac_defines
    public_deps = [ "//foundation/graphic/graphic_2d/mock:graphic_mock_log" ]
  } else if (use_clang_ios) {
    defines = graphic_decode_ios_defines
    public_deps = [ "//foundation/graphic/graphic_2d/mock:graphic_mock_log" ]
  } else if (use_clang_android) {
    defines = graphic_decode_android_defines
    public_deps = [ "//foundation/graphic/graphic_2d/mock:graphic_mock_log" ]
  } else {
    public_deps =
        [ "//base/hiviewdfx/hilog/interfaces/native/innerkits:libhilog" ]
  }
}
