# Copyright (C) 2022 Huawei Device Co., Ltd.
# Licensed under the Apache License, Version 2.0 (the "License");
# you may not use this file except in compliance with the License.
# You may obtain a copy of the License at
#
#     http://www.apache.org/licenses/LICENSE-2.0
#
# Unless required by applicable law or agreed to in writing, software
# distributed under the License is distributed on an "AS IS" BASIS,
# WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
# See the License for the specific language governing permissions and
# limitations under the License.

import("//build/ohos.gni")

# utils {{{
group("utils") {
  if (current_os == "ohos") {
    public_deps = [ "//commonlibrary/c_utils/base:utils" ]
  } else {
    public_deps = [ ":mock_utils" ]
  }
}

config("utils_config") {
  include_dirs = [ "utils" ]
}

ohos_source_set("mock_utils") {
  public_configs = [ ":utils_config" ]
  sources = [
    "utils/directory_ex.cpp",
    "utils/observer.cpp",
    "utils/parcel.cpp",
    "utils/refbase.cpp",
    "utils/rwlock.cpp",
    "utils/string_ex.cpp",
    "utils/thread_pool.cpp",
    "utils/unicode_ex.cpp",
  ]
  public_deps = [ "//third_party/bounds_checking_function:libsec_shared" ]
}
# utils }}}
